<resources>
    <string name="app_name">HrManagerSys</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password at least 6 characters</string>
    <string name="login_failed">"Login failed. Check your username or password."</string>
    <string name="edit_message">Enter a message</string>
    <string name="botton_send">Send</string>
    <string name="person_info_manage">Personnel Information Manage</string>
    <string name="attend_info_manage">Attendance Information Manage</string>
    <string name="option_staff_trial">Staff Trial</string>
    <string name="option_staff_probation">Probation</string>
    <string name="option_staff_dismiss">Staff Dismiss</string>
    <string name="option_staff_retire">Staff Retire</string>
    <string name="option_vacation">Vacation Setting</string>
    <string name="option_attendance_project">Project Setting</string>
    <string name="option_attendance_class">Class Setting</string>
    <string name="option_attendance_person">Personal Setting</string>
    <string name="title_staff_trial">Staff Trial</string>
    <string name="title_staff_probation">Probation</string>
    <string name="title_staff_dismiss">Staff Dismiss</string>
    <string name="title_staff_retire">Staff Retire</string>
    <string name="title_vacation">Vacation Setting</string>
    <string name="title_attendance_project">Project Setting</string>
    <string name="title_attendance_class">Class Setting</string>
    <string name="title_attendance_person">Personal Setting</string>
    <string name="botton_add_attendance_project_info">Add attendance project information</string>
    <string name="botton_attendance_project_return">Return parent activity</string>
    <string name="title_add_attendance_project">Add attendance project</string>
    <string name="prompt_projectName">input project name</string>
    <string name="text_projectName">Project Name</string>
    <string name="text_projectDate">Project Date</string>
    <string name="text_projectTimeStart">Project time start</string>
    <string name="text_projectTimeEnd">Project time end</string>
    <string name="text_projectSetting">Project Setting</string>
    <string name="title_login">Login in</string>
</resources>
